--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,6 @@
 
 .banner {
     height: 50vh;
-    background: url(../images/ride.png);
 }
 
 .mytext {
@@ -16,11 +15,21 @@
     font-family: Rye;
     font-size: 40px;
 }
-.find{
-    height:42.61vh;
+
+.find {
+    height: 42.61vh;
     background-color: teal;
     width: 100%;
 }
+
 .buttonpad {
     padding-top: 17vh;
 }
+/* .ride {
+    background: url(../images/book.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 42.61vh;
+    width: 100%;
+} */
