--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+/* Dominic css */
+
 /* IMPORT GOOGLE FONTS */
 @import url('https://fonts.googleapis.com/css?family=Rye&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
@@ -28,3 +30,5 @@ body {
 .buttonpad {
     padding-top: 17vh;
 }
+
+/* Dominic css */
