add comment in css

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-
+/* joseph css */
 .flip-card {
     background-color: transparent;
     width: 300px;
@@ -37,6 +37,7 @@
     color: white;
     transform: rotateY(180deg);
   }
+  /* joseph css */
 /* Dominic css */
 
 
