--- a/css/styles.css
+++ b/css/styles.css
@@ -37,6 +37,9 @@
     color: white;
     transform: rotateY(180deg);
   }
+  img{
+      border-radius: 50%;
+  }
   /* joseph css */
 /* Dominic css */
 
