change color back to teal

--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,7 @@
   }
   
   .flip-card-back {
-    background-color: #5de0e0;
+    background-color: #119191;
     color: white;
     transform: rotateY(180deg);
   }
@@ -73,5 +73,8 @@ body {
 }
 
 .btn-primary{
-    background-color: #5de0e0;
+    background-color: #119191;
+}
+.btn-primary:hover{
+    background-color: rgb(24, 21, 22)
 }
