--- a/css/styles.css
+++ b/css/styles.css
@@ -30,3 +30,114 @@ body {
 .buttonpad {
     padding-top: 17vh;
 }
+
+/* footer by karshe */
+p {
+    color: #999;
+    line-height: 25px;
+}
+
+h2,
+h3 {
+    color: #fff;
+}
+
+.footer-top {
+    background: #111;
+    padding: 40px 0;
+}
+
+.segment-one h3 {
+    font-family: courgette;
+    color: #fff;
+    letter-spacing: 3px;
+    margin: 10px 0;
+}
+
+.segment-one h2 {
+    color: #fff;
+    font-family: poppins;
+    text-transform: uppercase;
+}
+
+.segment-two h3:before {
+    content: "|";
+    color: #c65039;
+    padding: 10px;
+}
+
+.segment-two ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.segment-two ul li {
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+    line-height: 40px;
+}
+
+.segment-two ul li a {
+    color: #999;
+    text-decoration: none;
+}
+
+segment-three h3 {
+    color: #fff;
+    font-family: poppins;
+    text-transform: uppercase;
+}
+
+.segment-three h3:before {
+    content: "|";
+    color: #c65039;
+    padding: 10px;
+}
+
+.segment-three a {
+    background: #494849;
+    width: 40px;
+    height: 40px;
+    display: inline-block;
+    border-radius: 50%;
+}
+
+.segment-three a i {
+    font-size: 20px;
+    color: #fff;
+    padding: 10px 12px;
+}
+
+.segment-four h2 {
+    color: #fff;
+    font-family: 'Courier New', Courier, monospace;
+    text-transform: uppercase;
+}
+
+.segment-four h2:before {
+    content: "|";
+    color: #c65039;
+    padding-right: 10px;
+}
+
+.segment-four form input[type=submit] {
+    background: #c65039;
+    border: none;
+    padding: 3px 15px;
+    margin-left: -5px;
+    color: #fff;
+    text-transform: uppercase;
+}
+
+.footer-bottom-text {
+    text-align: center;
+    background: #000;
+    line-height: 75px;
+}
+
+
+
+
+
+
+/* footer ends here */
