--- a/css/styles.css
+++ b/css/styles.css
@@ -203,6 +203,9 @@ body {
 .btn-primary:hover{
     background-color: rgb(205, 214, 214);
 }
+/* .round{
+    border-radius: 40%;
+} */
 /* kolum end */
 
 
